Added Enricher dependencies. More reliable supression of unchecked warnings for generated code. Added RedisEnricher Added faster unit access for PrototypeDescription